<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">playSMS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tittle">PLAYSMS</string>
    <string name="subtittle">FREE AND OPEN SOURCE SMS SOFTWARE</string>
    <string name="username">Username / EMail</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_compose_message">ComposeMessageActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="fragment_composer_to_hint">To: Number with Country Code</string>
    <string name="fragment_composer_msg_hint">Message</string>

</resources>
